syntax = "proto2";

import "google/protobuf/wrappers.proto";

option java_package = "org.jeasy.random.protobuf.testing.proto2";
option java_multiple_files = true;

message Proto2Message {
  reserved 99;
  reserved "reservedField";

  required double doubleField = 1;
  required float floatField = 2;
  optional int32 int32Field = 3;
  required int64 int64Field = 4;
  required uint32 uint32Field = 5;
  required uint64 uint64Field = 6;
  required sint32 sint32Field = 7;
  required sint64 sint64Field = 8;
  required fixed32 fixed32Field = 9;
  required fixed64 fixed64Field = 10;
  required sfixed32 sfixed32Field = 11;
  required sfixed64 sfixed64Field = 12;
  required bool boolField = 13;
  required string stringField = 14;
  required bytes bytesField = 15;
  optional Proto2Enum enumField = 16;
  required google.protobuf.StringValue stringValueField = 17;
  repeated string repeatedStringField = 18;
  required EmbeddedProto2Message embeddedMessage = 19;
  map<string, EmbeddedProto2Message> mapField = 20;

  oneof oneofField {
    double firstChoice = 30;
    string secondChoice = 31;
    Proto2Enum thirdChoice = 32;
    EmbeddedProto2Message forthChoice = 33;
  }
}

enum Proto2Enum {
  THIRD_VALUE = 1;
  FOURTH_VALUE = 2;
}

message EmbeddedProto2Message {
  required string stringField = 1;
  optional Proto2Enum enumField = 2;
}
